@@ -1,7 +1,6 @@
 package shop.nuribooks.books.member.grade.service;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
@@ -98,7 +97,7 @@ public class GradeServiceImpl implements GradeService {
 
 		return grades.stream()
 			.map(DtoMapper::toListDto)
-			.collect(Collectors.toList());
+			.toList();
 	}
 
 	/**
